data/derived/comb/progs/unify/prog3994.ml.out
Characters 64-68:
  | head::tail -> tail;;
                  ^^^^
Error: This expression has type 'a list
       but an expression was expected of type int
